# graphein

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  rustfmt.toml
.sqlx/: query-106ef9804b1b7a375c39cb75f9a54d9ae247415eab8d77ba364261db12bc2b5c.json  query-3ea037442784a1bacf88c0cd0288cab3cf14693abf970f31ebfb01148b154077.json  query-89f02be67b63b150e02017d4fdbd7b57175a94d9db39cd2acca7248bbc73532a.json  query-8a9959009c318ae6cabd779874e934b36d2bc5caa4677c84b3a4af8a727f6427.json  query-989d134801e52511d45b73555eddbb204b6e313f89322b4de75f2b4196d07f27.json  query-b084dfc926a75f9d6049d1df3a4c9d28eadb20ddc732786dd53fccd39f0e56c5.json  query-b7f75f62ac6d3223155a4dc097d388f308ec11ab087fa9cb7961ed1c62f1f335.json
.sqlx/migrations/: 1_types.sql  2_tables.sql  3_indexes.sql
app/: Cargo.toml  build.rs
app/src/: docs.rs  lib.rs  main.rs  routes.rs  schemas.rs
app/src/docs/: a_auth_routes.rs  auth_routes.rs  b_user_routes.rs  c_order_routes.rs
app/src/pages/: oauth_failure.html  oauth_success.html
app/src/routes/: auth.rs  events.rs  merchant.rs  oauth_failure.html  oauth_success.html  opts.rs  order.rs  orders.rs  user.rs
app/src/schemas/: bookbinding_types.rs  enums.rs  files.rs  orders.rs  paper_sizes.rs  users.rs
codegen/: Cargo.toml
codegen/src/: derive_table.rs  lib.rs
common/: Cargo.toml
common/src/: auth.rs  config.rs  daemons.rs  database.rs  error.rs  extract.rs  lib.rs  middleware.rs  permissions.rs  request.rs  response.rs  schemas.rs  state.rs
common/src/auth/: oauth.rs  sessions.rs
common/src/database/: files.rs  model.rs  orders.rs  papers.rs  settings.rs  table.rs  users.rs
common/src/schemas/: bookbinding_types.rs  enums.rs  files.rs  ids.rs  order_status_updates.rs  orders.rs  paper_sizes.rs  papers.rs  services.rs  settings.rs  users.rs
common/src/state/: bucket.rs  drafts.rs  thumbnailer.rs
migrations/: 2_tables.sql  3_indexes.sql
scripts/: Cargo.toml  create_order.py  main.py  populate_db.py  pyproject.toml
scripts/.sqlx/: query-0b806ebbfa151abaedb796b6c7f7515c96e7a7727fae16f42c15e3ab73f7a3fb.json  query-0fea71a9ec58c9a841da0849ffb4b0f9fc90041e7ced2666fccbd8650e892f26.json  query-9887e0d8d7a220a6977ac4a8f54e560f957d4fc18cd1b2f006305ab7dbf51344.json  query-bac46048a29d0221325a50cc4d9b961a3c0929c6908cb1624b4e05262d917929.json
scripts/src/: commands.rs  lib.rs  main.rs
scripts/src/commands/: add_merchant.rs  populate_db.rs
web/: .env.local  .env.template  .gitignore  eslint.config.ts  middleware.ts  next-i18next.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json
web/components/client/dashboard/: OrderCard.tsx  OrderEmptyCard.tsx
web/components/common/: Button.tsx  Checkbox.tsx  DescriptionList.tsx  Dialog.tsx  DropDownCard.tsx  FileDetailHeader.tsx  FileDetailRange.tsx  InputLabel.tsx  LabelGroup.tsx  MaterialIcon.tsx  NavigationBar.tsx  NumberInput.tsx  PersonAvatar.tsx  Popup.tsx  SegmentedButton.tsx  SegmentedGroup.tsx  SelectInput.tsx  TextInput.tsx
web/components/common/input/: Checkbox.tsx  NumberInput.tsx  SelectInput.tsx  TextInput.tsx
web/components/common/layout/: MerchantLayout.tsx  PageLoadTransition.tsx
web/components/common/order/: FileRangeConfig.tsx  OrderRange.tsx
web/components/common/tree/: TreeViewContainer.tsx  TreeViewWrapper.tsx
web/components/glance/: OrderCard.tsx  OrderEmptyCard.tsx
web/components/landing/: GoogleSignInButton.tsx  SignInButton.tsx
web/components/layout/: Layout.tsx  LoadingPage.tsx  MerchantLayout.tsx  PageLoadTransition.tsx
web/components/merchant/: Chip.tsx  DetailedViewHeader.tsx  MerchantDetailedOrderView.tsx
web/components/orders/: EmptyOrderCard.tsx  FileDetailHeader.tsx  FileDetailRange.tsx  FileRangeConfig.tsx  OrderCard.tsx  OrderEmptyCard.tsx
web/components/orders/new/: ConfigOrder.tsx  ConfigServices.tsx  Review.tsx  UploadFiles.tsx  configOrder.tsx  review.tsx  upload.tsx
web/components/settings/: UserProfileSettings.tsx
web/hooks/: useDialogContext.ts  useLocalStorage.ts  useLocaleSwitcher.ts  useNavbarContext.ts  useNullableState.ts  useToggle.ts  useUserContext.ts
web/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  about.tsx  glance.tsx  index.tsx  markdown.tsx  onboard.tsx  settings.tsx
web/pages/client/: dashboard.tsx
web/pages/client/order/detail/: [id].tsx
web/pages/client/order/history/: index.tsx
web/pages/client/order/new/: [stage].tsx
web/pages/merchant/: dashboard.tsx  management.tsx
web/pages/order/: history.tsx
web/pages/order/detail/: [id].tsx
web/pages/order/history/: index.tsx
web/pages/order/new/: [stage].tsx
web/public/locales/en/: common.json
web/public/locales/th/: common.json
web/query/: fetchDetailedOrder.ts  fetchMerchantOrdersGlance.ts  fetchOrderHistory.ts  fetchOrdersGlance.ts  fetchPapers.ts  fetchThumbnail.ts  fetchUser.ts
web/src/pages/: index.tsx
web/src/styles/: fonts.css  globals.css
web/styles/: fonts.css  globals.css
web/translations/en/: about.json  common.json  glance.json  history.json  index.json  management.json  merchantGlance.json  onboard.json  order.json  settings.json
web/translations/th/: about.json  common.json  glance.json  history.json  index.json  management.json  merchantGlance.json  onboard.json  order.json  settings.json
web/utils/: index.ts  useUserContext.ts
web/utils/helpers/: checkIsBuildingOrder.ts  cn.ts  getDateString.ts  getFormattedDateTime.ts  getFormattedFilesize.ts  getGreetingMessage.ts  getInitialsOfName.ts  getLoggedInUser.ts  getOrderStatusFromTimestamp.ts  getUserFullName.ts  getUserProfileURL.ts  isSignedIn.ts  isValidRange.ts  mime.ts  serverSideTranslations.ts
web/utils/helpers/code/: cn.ts
web/utils/helpers/common/: getDateTimeString.ts  getInitialsOfString.ts  getLoggedInUser.ts  getUserFullName.ts  getUserProfileURL.ts  isSignedIn.ts
web/utils/helpers/glance/: getGreetingMessage.ts
web/utils/helpers/order/details/: getFormattedFilesize.ts  (+2 more)
web/utils/testResponse/: clientDashboard.ts
web/utils/types/: backend.ts  client.ts  common.ts  landing.ts
(+4 files in other folders)
