[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Phawat Suksiriwan <phawat@suksiriwan.com>"]
publish = false
rust-version = "1.88"

[workspace]
resolver = "3"
members = ["app", "common", "scripts"]
default-members = ["app", "common"]

[workspace.dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum-macros = "0.5.0"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["from", "into"] }
dotenvy = "0.15.7"
futures = "0.3.31"
headers = "0.4.1"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
jsonwebtoken = "9.3.1"
libvips = "1.7.1"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["json", "native-tls"] }
rust-s3 = "0.36.0-beta.2"
scc = "2.3.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = { version = "0.14.0", features = ["axum"] }
serde_with = { version = "3.12.0", features = ["macros"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "chrono",
    "runtime-tokio-native-tls",
    "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util = "0.7.15"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
