[package]
name = "graphein-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-macros.workspace = true
chrono.workspace = true
console-subscriber.workspace = true
futures.workspace = true
graphein-common = { path = "../common" }
headers.workspace = true
hex.workspace = true
http.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_qs.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
